@@ -133,17 +133,6 @@ h2(#push_stream_footer_template). push_stream_footer_template <a name="push_stre
 The text that will be sent to subscribers before connection is closed (channel deleted or subscriber timeout), except when long polling connections timed out.
 
 
-h2(#push_stream_content_type). push_stream_content_type <a name="push_stream_content_type" href="#">&nbsp;</a>
-
-*syntax:* _push_stream_content_type string_
-
-*default:* _text/plain_
-
-*context:* _location (push_stream_subscriber)_
-
-The content type used on responses to subscribers. Must be complient with push_stream_header_template, push_stream_message_template and push_stream_footer_template.
-
-
 h2(#push_stream_broadcast_channel_max_qtd). push_stream_broadcast_channel_max_qtd <a name="push_stream_broadcast_channel_max_qtd" href="#">&nbsp;</a>
 
 *syntax:* _push_stream_broadcast_channel_max_qtd number_
