@@ -5,7 +5,7 @@ error_log   logs/nginx-main_error.log debug;
 master_process      off;
 daemon              off;
 worker_rlimit_core  500M;
-working_directory /tmp/nginx;
+working_directory /tmp;
 
 worker_processes    2;
 
@@ -106,7 +106,7 @@ http {
             # footer to be sent when finishing subscriber connection
             push_stream_footer_template                 "</body></html>";
             # content-type
-            push_stream_content_type                    "text/html; charset=utf-8";
+            default_type                                "text/html; charset=utf-8";
         }
 
         location ~ /ev/(.*) {
